WIP: fix distorted back image on mobile

--- a/dev/sass/style.scss
+++ b/dev/sass/style.scss
@@ -42,7 +42,7 @@ body {
 
   &:before {
     @include dimensions(100vw, 100vh);
-    background: url('images/nikita-kachanovsky-OVbeSXRk_9E-unsplash.jpg') 0 80%/cover no-repeat;
+    background: url('images/nikita-kachanovsky-OVbeSXRk_9E-unsplash.jpg') 0 40%/cover no-repeat;
     content: '';
     left: 0;
     position: absolute;
